--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,5 +4,5 @@
 <p><%= portfolio_item.title %></p>
 <p><%= portfolio_item.subtitle %></p>
 <p><%= portfolio_item.body %></p>
-<p><%= image_tag(portfolio_item.thumb_image, alt:"Image of #{portfolio_item.title}") %></p>
+<p><%= image_tag(portfolio_item.thumb_image, alt:"Image of #{portfolio_item.title}") if portfolio_item.thumb_image %></p>
 <% end %>
