--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,7 +3,7 @@
 <%= link_to "Create New Portfolio Item", new_portfolio_path %>
 
 <% @portfolio_items.each do |portfolio_item| %>
-<p><%= portfolio_item.title %></p>
+<p><%= link_to portfolio_item.title, portfolio_item %></p>
 <p><%= portfolio_item.subtitle %></p>
 <p><%= portfolio_item.body %></p>
 <p><%= image_tag(portfolio_item.thumb_image, alt:"Image of #{portfolio_item.title}") if portfolio_item.thumb_image %></p>
