--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -3,4 +3,8 @@
 <em><%= @portfolio_item.subtitle %></em>
 <p><%= @portfolio_item.body %></p>
 
+<h2>Technologies Used:</h2>
+<% @portfolio_item.technologies.each do |tech| %>
+  <p><%= tech.name %></p>
+<% end %>
 <p><%= link_to "Back", portfolios_path %></p>
