--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,13 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
+    <% if !user_signed_in? %>
+      <%= link_to "LOG IN", new_user_session_path %>
+      <%= link_to "SIGN UP", new_user_registration_path %>
+    <% else %>
+      <%= link_to "LOG OUT", destroy_user_session_path, method: :delete %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
