--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#home</h1>
+<h1>Hi, <%= user_signed_in? ? current_user.first_name : "Guest" %></h1>
 <p>Find me in app/views/pages/home.html.erb</p>
