--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,5 +21,7 @@
     <% end %>
 
     <%= yield %>
+
+    <p><%= session[:source] ? "Thank you visiting me from #{session[:source]}" : nil  %></p>
   </body>
 </html>
