Refactored application controller to include concern for source feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,6 @@
 
     <%= yield %>
 
-    <p><%= session[:source] ? "Thank you visiting me from #{session[:source]}" : nil  %></p>
+    <p><%= session[:source] ? "Thanks for visiting me from #{session[:source]}" : nil  %></p>
   </body>
 </html>
