--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -24,7 +24,7 @@
 
     <%= yield %>
 
-    <%= render "shared/nav" %>
+    <%= render "shared/nav", location: "bottom" %>
 
     <p><%= session[:source] ? "Thanks for visiting me from #{session[:source]}" : nil  %></p>
   </body>
