--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -15,7 +15,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <%= render "shared/nav" %>
+    <%= render "shared/nav", location: "top" %>
 
     <% if !user_signed_in? %>
       <%= link_to "LOG IN", new_user_session_path %>
