--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -17,12 +17,7 @@
 
     <%= render "shared/nav", location: "top" %>
 
-    <% if !user_signed_in? %>
-      <%= link_to "LOG IN", new_user_session_path %>
-      <%= link_to "SIGN UP", new_user_registration_path %>
-    <% else %>
-      <%= link_to "LOG OUT", destroy_user_session_path, method: :delete %>
-    <% end %>
+    <%= login_helper %>
 
     <%= yield %>
 
