--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,6 @@
 
     <%= yield %>
 
-    <p><%= session[:source] ? "Thanks for visiting me from #{session[:source]}" : nil  %></p>
+    <%= source_helper %>
   </body>
 </html>
