--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -2,13 +2,4 @@
 
 <%= link_to "Create New Portfolio Item", new_portfolio_path %>
 
-<% @portfolio_items.each do |portfolio_item| %>
-  <p><%= link_to portfolio_item.title, portfolio_item %></p>
-  <p><%= portfolio_item.subtitle %></p>
-  <p><%= portfolio_item.body %></p>
-  <p><%= image_tag(portfolio_item.thumb_image, alt:"Image of #{portfolio_item.title}") if portfolio_item.thumb_image %></p>
-  <p>
-    <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
-    <%= link_to "Delete", portfolio_path(portfolio_item.id), method: :delete, data: { confirm: 'Are you sure?' }  %>
-  </p>
-<% end %>
+<%= render partial: "portfolio_item", collection: @portfolio_items %>
