Integrated new gem into rails app for copyright

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -22,5 +22,7 @@
     <%= render "shared/nav", location: "bottom" %>
 
     <%= source_helper %>
+
+    <%= copyright_generator %>
   </body>
 </html>
