--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,17 +14,22 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
 
-    <%= render "shared/nav", location: "top" %>
+          <%= render "shared/application_nav" %>
 
-    <%= login_helper %>
+          <%= login_helper %>
 
-    <%= yield %>
+          <%= yield %>
 
-    <%= source_helper %>
+          <%= source_helper %>
 
-    <%= copyright_generator %>
+          <%= copyright_generator %>
+
+        </div>
+      </div>
+    </div>
   </body>
 </html>
