Updated application layout styles along with helper methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,11 @@
 
           <%= render "shared/application_nav" %>
 
-          <%= login_helper %>
-
           <%= yield %>
 
           <%= source_helper %>
 
-          <%= copyright_generator %>
+          <%= render "shared/application_footer" %>
 
         </div>
       </div>
