--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -14,17 +14,7 @@
   </head>
 
   <body>
-    <div class="blog-masthead">
-      <div class="container">
-        <nav class="nav blog-nav">
-          <a class="nav-link active" href="#">Home</a>
-          <a class="nav-link" href="#">New features</a>
-          <a class="nav-link" href="#">Press</a>
-          <a class="nav-link" href="#">New hires</a>
-          <a class="nav-link" href="#">About</a>
-        </nav>
-      </div>
-    </div>
+    <%= render "shared/blog_nav" %>
 
     <div class="blog-header">
       <div class="container">
@@ -36,7 +26,6 @@
     <div class="container">
 
       <div class="row">
-        <%= login_helper %>
 
         <%= yield %>
 
@@ -80,8 +69,6 @@
         <a href="#">Back to top</a>
       </p>
     </footer>
-
-    <%= render "shared/nav", location: "bottom" %>
 
     <%= source_helper %>
 
