--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -20,13 +20,12 @@
       <div class="container">
         <h1 class="blog-title">The Bootstrap Blog</h1>
         <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
       </div>
     </div>
 
     <div class="container">
-
       <div class="row">
-
         <%= yield %>
 
         <div class="col-sm-3 offset-sm-1 blog-sidebar">
