--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -15,32 +15,16 @@
 
   <body>
     <%= render "shared/blog_nav" %>
-
-    <div class="blog-header">
-      <div class="container">
-        <h1 class="blog-title">My Blog</h1>
-        <p class="lead blog-description">An example blog template built with Bootstrap.</p>
-        <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
-      </div>
-    </div>
+    <%= render "shared/blog_masthead" %>
+    <%= source_helper %>
 
     <div class="container">
       <div class="row">
         <%= yield %>
-
         <%= render "shared/blog_sidebar" %>
       </div>
     </div>
 
-    <footer class="blog-footer">
-      <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-      <p>
-        <a href="#">Back to top</a>
-      </p>
-    </footer>
-
-    <%= source_helper %>
-
-    <%= copyright_generator %>
+    <%= render "shared/blog_footer" %>
   </body>
 </html>
