--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,8 +1,6 @@
-<p><%= link_to portfolio_item.title, portfolio_item %></p>
-<p><%= portfolio_item.subtitle %></p>
-<p><%= portfolio_item.body %></p>
-<p><%= image_tag(portfolio_item.thumb_image, alt:"Image of #{portfolio_item.title}") if portfolio_item.thumb_image %></p>
-<p>
-  <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) if logged_in?(:site_admin) %>
-  <%= link_to "Delete", portfolio_path(portfolio_item.id), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin)  %>
-</p>
+<div class="card">
+  <%= image_tag(portfolio_item.thumb_image, alt:"Image of #{portfolio_item.title}") if portfolio_item.thumb_image %>
+  <p class="card-text">
+    <span><%= link_to portfolio_item.title, portfolio_item %></span> <%= portfolio_item.subtitle %>
+  </p>
+</div>
