--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,10 +1,17 @@
-<%= image_tag @portfolio_item.main_image if @portfolio_item.main_image %>
-<h1><%= @portfolio_item.title %></h1>
-<em><%= @portfolio_item.subtitle %></em>
-<p><%= @portfolio_item.body %></p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7">
+      <%= image_tag @portfolio_item.main_image if @portfolio_item.main_image %>
+    </div>
+    <div class="col-md-5">
+      <h1><%= @portfolio_item.title %></h1>
+      <em><%= @portfolio_item.subtitle %></em>
+      <p><%= @portfolio_item.body %></p>
 
-<h2>Technologies Used:</h2>
-<% @portfolio_item.technologies.each do |tech| %>
-  <p><%= tech.name %></p>
-<% end %>
-<p><%= link_to "Back", portfolios_path %></p>
+      <h2>Technologies Used:</h2>
+      <% @portfolio_item.technologies.each do |tech| %>
+        <p><%= tech.name %></p>
+      <% end %>
+    </div>
+  </div>
+</div>
