--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,17 +1,26 @@
 <div class="inner cover">
   <h1 class="cover-heading">About Me</h1>
-  <p class="lead">
-    With over a decade of development experience in a number of industries I realized
-    that the typical product creation process between clients and developers was flawed.
-    All too often developers rarely comunicate to clients throughout the development stage,
-    resulting in a final product that fails to reach the goal sought by the customer and
-    end user.
-  </p>
-  <p class="lead">
-    For this reason I decided to utilize a completely different development pattern that focuses
-    on highly focused communication and transparent design patterns. When I take on a project
-    not only do I work to craft the application according to the client's specifications, I give
-    daily updates to ensure that the project is aligning properly with the client's goals.
-    The end result is the right product, delivered on time, and on budget. 
-  </p>
+  <hr>
+
+  <div class="row">
+    <div class="col-md-3">
+      <%= image_tag "profile.jpg", alt: "profile image", class: "img-fluid" %>
+    </div>
+    <div class="col-md-9">
+      <p class="lead">
+        With over a decade of development experience in a number of industries I realized
+        that the typical product creation process between clients and developers was flawed.
+        All too often developers rarely comunicate to clients throughout the development stage,
+        resulting in a final product that fails to reach the goal sought by the customer and
+        end user.
+      </p>
+      <p class="lead">
+        For this reason I decided to utilize a completely different development pattern that focuses
+        on highly focused communication and transparent design patterns. When I take on a project
+        not only do I work to craft the application according to the client's specifications, I give
+        daily updates to ensure that the project is aligning properly with the client's goals.
+        The end result is the right product, delivered on time, and on budget.
+      </p>
+    </div>
+  </div>
 </div>
