--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,5 +1,5 @@
 <div class="card" data-id="<%= portfolio_item.id %>">
-  <%= image_tag(portfolio_item.thumb_image, alt:"Image of #{portfolio_item.title}") if portfolio_item.thumb_image %>
+  <%= image_tag(portfolio_item.thumb_image.url, alt:"Image of #{portfolio_item.title}") if portfolio_item.thumb_image %>
   <p class="card-text">
     <span><%= link_to portfolio_item.title, portfolio_item %></span> <%= portfolio_item.subtitle %>
   </p>
