--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -12,6 +12,8 @@
       <% @portfolio_item.technologies.each do |tech| %>
         <p><%= tech.name %></p>
       <% end %>
+
+      <%= link_to "Edit", edit_portfolio_path(@portfolio_item), class: "btn btn-secondary btn-block" if logged_in?(:site_admin) %>
     </div>
   </div>
 </div>
