--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -36,11 +36,12 @@
   <div class="row">
     <div class="col-md-12">
       <%= f.fields_for(:technologies) do |technology_form| %>
-        <div class="form-group">
-          <%= technology_form.label :name %>
-          <%= technology_form.text_field :name, class: "form-control" %>
-        </div>
+        <%= render 'technology_fields', f: technology_form %>
       <% end %>
+
+      <div>
+        <%= link_to_add_association 'Add Technology', f, :technologies %>
+      </div>
     </div>
   </div>
 
