Implemented gritter for notifications

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
 
           <%= render "shared/application_footer" %>
 
+          <%= render "shared/alert" %>
         </div>
       </div>
     </div>
