--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
 
           <%= render "shared/application_footer" %>
 
-          <%= render "shared/alert" %>
+          <%= alerts %>
         </div>
       </div>
     </div>
