Refactored form into partial for comments and added validations to comment model

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -2,16 +2,7 @@
   <h2><%= @blog.title %></h2>
   <p><%= @blog.body %></p>
 
-  <% unless logged_in? %>
-    <%= form_for @comment, url: "#" do |f| %>
-      <div class="form-group">
-        <%= f.text_area :content, placeholder: "Comment...", class: "form-control", rows: 5 %>
-      </div>
-
-      <%= f.submit "Post Comment", class: "btn btn-primary" %>
-    <% end %>
-  <% end %>
-
+  <%= render "comments/comment_form" %>
   <%= render @blog.comments %>
 
   <% if logged_in?(:site_admin) %>
