Implemented jquery functions for action cable comment feature

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -3,7 +3,10 @@
   <p><%= @blog.body %></p>
 
   <%= render "comments/comment_form" %>
-  <%= render @blog.comments %>
+
+  <div id="comments" data-blog-id="<%= @blog.id %>">
+    <%= render @blog.comments %>
+  </div>
 
   <% if logged_in?(:site_admin) %>
     <%= link_to 'Edit', edit_blog_path(@blog) %> |
