--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,4 +1,4 @@
-<% unless logged_in? %>
+<% if user_signed_in? %>
   <%= form_for @comment, url: "#" do |f| %>
     <div class="form-group">
       <%= f.text_area :content, placeholder: "Comment...", class: "form-control", rows: 5 %>
