Completed comment feature with action cable

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -5,7 +5,7 @@
   <%= render "comments/comment_form" %>
 
   <div id="comments" data-blog-id="<%= @blog.id %>">
-    <%= render @blog.comments %>
+    <%= render @blog.comments.order("created_at DESC") %>
   </div>
 
   <% if logged_in?(:site_admin) %>
