--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -6,13 +6,22 @@
   <% end %>
 
   <div class="form-group">
-    <%= form.label :title %>
-    <%= form.text_field :title, class: "form-control" %>
+    <%= form.text_field :title, placeholder: "Title", class: "form-control" %>
   </div>
 
   <div class="form-group">
-    <%= form.label :body %>
-    <%= form.text_area :body, class: "form-control", rows: 13 %>
+    <%= form.text_area :body, placeholder: "Blog Content...", class: "form-control", rows: 13 %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :topic_id %>
+    <%= form.collection_select(:topic_id, Topic.all, :id, :title,
+                                {
+                                    selected: blog.topic_id,
+                                    include_blank: true
+                                  },
+                               class: "form-control"
+                              ) %>
   </div>
 
   <div class="form-group">
