--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -14,14 +14,22 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :topic_id %>
     <%= form.collection_select(:topic_id, Topic.all, :id, :title,
                                 {
                                     selected: blog.topic_id,
-                                    include_blank: true
+                                    include_blank: false,
+                                    prompt: '---- Please select the topic of this post ----'
                                   },
                                class: "form-control"
                               ) %>
+  </div>
+
+  <div class="form-group">
+    <%= form.radio_button :status, 'draft' %>
+    <%= form.label :status, 'Draft' %>
+
+    <%= form.radio_button :status, 'published' %>
+    <%= form.label :status, 'Published' %>
   </div>
 
   <div class="form-group">
