--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,7 +1,7 @@
 <div class="blog-post">
   <h2 class="blog-post-title"><%= link_to blog.title, blog %></h2>
   <p class="blog-post-meta"><%= blog.published? ? "Published" : "Drafted" %> <%= distance_of_time_in_words(blog.updated_at, Time.now) %> ago</p>
-  <p><%= blog.body %></p>
+  <p><%= markdown blog.body %></p>
   <% if logged_in?(:site_admin) %>
     <%= link_to 'Edit', edit_blog_path(blog) %> /
     <%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %>
