--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,5 +1,22 @@
 <div class="col-sm-8 blog-main">
-  <h2><%= @blog.title %></h2>
+
+  <nav class="breadcrumb">
+    <%= link_to "Home", root_path, class:"breadcrumb-item" %>
+    <%= link_to "Blog", blogs_path, class:"breadcrumb-item" %>
+    <span class="breadcrumb-item active"><%= @blog.title %></span>
+    <% if logged_in?(:site_admin) %>
+      <span class="ml-auto">
+        <%= link_to fa_icon("pencil-square-o"), edit_blog_path(@blog) %>
+        <%= link_to fa_icon("trash-o"), @blog, method: :delete, data: { confirm: "Are you sure want to delete this post?" } %>
+      </span>
+    <% end %>
+
+  </nav>
+
+  <h2>
+    <%= @blog.title %>
+  </h2>
+
   <h6><%= @blog.topic.title %></h6>
 
   <p><%= markdown @blog.body %></p>
