--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -2,7 +2,7 @@
   <h2 class="blog-post-title">
     <%= link_to blog.title, blog %>
     <span class="pull-right">
-      <%= render partial: 'admin_actions', locals: { blog: blog } %>
+      <%= render partial: 'blogs/admin_actions', locals: { blog: blog } %>
     </span>
   </h2>
   <p class="blog-post-meta"><%= blog.published? ? "Published" : "Drafted" %> <%= distance_of_time_in_words(blog.updated_at, Time.now) %> ago</p>
