--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -8,8 +8,8 @@
     <h4>Topic</h4>
     <span>
       <% @sidebar_topics.each do |topic| %>
-        <div class="btn btn-info btn-sm">
-          <%= link_to topic.title, topic, style: "color: white; text-decoration: none" %>
+        <div class="btn btn-info btn-sm" style= "margin-bottom: 5px;">
+          <%= link_to topic.title, topic, style: "color: white; text-decoration: none; margin-bottom: 15px;" %>
         </div>
       <% end%>
     </span>
