--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -191,3 +191,32 @@ h6, .h6 {
 .comment-name {
   font-weight: 700;
 }
+
+.bg-light {
+  background-color: #428bca !important;
+}
+
+.blog-nav {
+  margin-bottom: 30px;
+}
+
+.navbar-light .navbar-brand {
+    color: #fff;
+    font-size: 1.75rem;
+    font-weight: 500;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: #cdddeb;
+}
+
+.navbar-light .navbar-nav .nav-link.active {
+  color: #fff;
+}
+
+@media (max-width: 991px) {
+  .nav-link.active:after {
+    bottom: 40%;
+    transform: rotate(-90deg);
+  }
+}
