Implemented style changes for about and contact pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -223,3 +223,12 @@ body {
 .tech-news > .card {
   padding: 30px;
 }
+
+.app-card-container {
+  color: #000;
+  text-align: left;
+}
+
+.app-card-container a {
+  color: blue;
+}
