--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,15 +1,19 @@
-<h1>Would you like to work together?</h1>
-<hr>
-<div class="row">
-  <div class="col-md-6">
-    <h3>Office Address</h3>
-    <p>Komplek Ujungberung Indah (cluster) Jl. Segar Dalam Blok D No.15</p>
-    <h3>Phone</h3>
-    <p><%= number_to_phone "081316096313", pattern: /(\d{4})(\d{4})(\d{4})$/ %></p>
-    <h3>Email</h3>
-    <p><%= link_to "Email me", "mail_to:rizki@3ribulabs.com?subject=WouldYouLikeToWorkTogether" %></p>
-  </div>
-  <div class="col-md-6">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.844425349045!2d107.69245694979135!3d-6.90919866951349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNsKwNTQnMzMuMSJTIDEwN8KwNDEnNDAuNyJF!5e0!3m2!1sid!2sid!4v1553737853225" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+<div class="app-card-container">
+  <div class="card">
+    <h1>Would you like to work together?</h1>
+    <hr>
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Office Address</h3>
+        <p>Komplek Ujungberung Indah (cluster) Jl. Segar Dalam Blok D No.15</p>
+        <h3>Phone</h3>
+        <p><%= number_to_phone "081316096313", pattern: /(\d{4})(\d{4})(\d{4})$/ %></p>
+        <h3>Email</h3>
+        <p><%= link_to "Email me", "mail_to:rizki@3ribulabs.com?subject=WouldYouLikeToWorkTogether" %></p>
+      </div>
+      <div class="col-md-6">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.844425349045!2d107.69245694979135!3d-6.90919866951349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNsKwNTQnMzMuMSJTIDEwN8KwNDEnNDAuNyJF!5e0!3m2!1sid!2sid!4v1553737853225" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>
   </div>
 </div>
