Updated about page to have collapsable components

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -23,6 +23,37 @@
             daily updates to ensure that the project is aligning properly with the client's goals.
             The end result is the right product, delivered on time, and on budget.
           </p>
+
+          <p>
+            <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#jobHistory" aria-expanded="false" aria-controller="jobHistory">
+              Job History
+            </button>
+            <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#education" aria-expanded="false" aria-controller="jobHistory">
+              Education
+            </button>
+          </p>
+
+          <p>
+            <div class="collapse" id="jobHistory">
+              <div class="card card-block">
+                Job 1
+              </div>
+              <div class="card card-block">
+                Job 2
+              </div>
+            </div>
+            <div class="collapse" id="education">
+              <div class="card card-block">
+                School 1
+              </div>
+              <div class="card card-block">
+                School 2
+              </div>
+              <div class="card card-block">
+                School 3
+              </div>
+            </div>
+          </p>
         </div>
       </div>
     </div>
