--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,9 +1,17 @@
-<div class="masthead clearfix">
-  <div class="inner">
-    <h3 class="masthead-brand">Muhammad Rizki</h3>
-    <nav class="nav nav-masthead app-nav">
-      <%= nav_helper "nav-link", "span" %>
-      <%= login_helper "nav-link" %>
-    </nav>
+<nav class="navbar navbar-expand-lg navbar-light">
+  <div class="masthead clearfix">
+    <div class="inner">
+      <%= link_to "Muhammad Rizki", root_path, class: "masthead-brand" %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedHomeContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="nav nav-masthead app-nav collapse navbar-collapse ml-auto" id="navbarSupportedHomeContent">
+        <ul class="navbar-nav app-nav">
+          <%= nav_helper "nav-link", "span" %>
+          <%#= login_helper "nav-link" %>
+        </ul>
+      </div>
+    </div>
   </div>
-</div>
+</nav>
