--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -77,16 +77,22 @@ h6, .h6 {
 
 .masthead {
   margin-bottom: 2rem;
+  a {
+    text-decoration: none;
+  }
 }
 
 .masthead-brand {
   margin-bottom: 0;
+  font-size: 1.75rem;
+  font-weight: 500;
+  font-family: 'Roboto Slab', serif;
 }
 
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: bold;
-  color: rgba(255,255,255,.5);
+  color: rgba(255,255,255,.5) !important;
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
@@ -101,7 +107,7 @@ h6, .h6 {
 }
 
 .nav-masthead .active {
-  color: #fff;
+  color: #fff !important;
   border-bottom-color: #fff;
 }
 
@@ -200,6 +206,10 @@ h6, .h6 {
 .app-nav span {
   margin-left: 15px;
   margin-right: 15px;
+}
+
+.app-nav .nav-link {
+  text-align: left;
 }
 
 #background {
